--- a/Galeria.html
+++ b/Galeria.html
@@ -68,13 +68,13 @@
                         
                         <h3>FOTOS: AMANECER ANDINO</h3>
                             <div class="galeria"> 
-                                <img src="uno.jpg" alt="Imagen 1">
-                                <img src="dos.jpg" alt="Imagen 2">
-                                <img src="cuatro.jpg" alt="Imagen 4">
-                                <img src="cinco.jpg" alt="Imagen 5">
-                                <img src="seis.jpg" alt="Imagen 6">
-                                <img src="siete.jpg" alt="Imagen 6">
-                                <img src="tres.jpg" alt="Imagen 3">         
+                                <img class="fondo" src="uno.jpg" alt="Imagen 1">
+                                <img class="fondo" src="dos.jpg" alt="Imagen 2">
+                                <img class="fondo" src="cuatro.jpg" alt="Imagen 4">
+                                <img class="fondo" src="cinco.jpg" alt="Imagen 5">
+                                <img class="fondo" src="seis.jpg" alt="Imagen 6">
+                                <img class="fondo" src="siete.jpg" alt="Imagen 6">
+                                <img class="fondo" src="tres.jpg" alt="Imagen 3">         
                             </div>
                     </article>
                     <article>
