--- a/Galeria.html
+++ b/Galeria.html
@@ -68,8 +68,8 @@
                         
                         <h3>FOTOS: AMANECER ANDINO</h3>
                             <div class="galeria"> 
-                                <img class="fondo" src="uno.jpg" alt="Imagen 1">
-                                <img class="fondo" src="dos.jpg" alt="Imagen 2">
+                                <img src="uno.jpg" alt="Imagen 1">
+                                <img src="dos.jpg" alt="Imagen 2">
                                       
                             </div>
                     </article>
