--- a/Galeria.html
+++ b/Galeria.html
@@ -188,6 +188,16 @@
                                 <source src="video7.mp4" type="video/mp4">
                                 Tu navegador no soporta la reproducción de videos.
                               </video>
+                              <h3>Palabras del director en la apertura de la muestra de los emprendimientos</h3>
+                              <video width="640" height="360" controls>
+                                <source src="video8.mp4" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                              </video>
+                              <h3>Apertura del día del proyecto</h3>
+                              <video width="640" height="360" controls>
+                                <source src="video9.mp4" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                              </video>
                         </figure>
                     </div>
                     </article>
